2004-02-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/ly-rules.make: Remove any broken lily-*.tex files before
	lilypond-book run.

	* stepmake/stepmake/c++-vars.make (EXTRA_CXXFLAGS): Remove -pipe
	comment.

	* stepmake/aclocal.m4: Add --enable-pipe option, with check.
	Enabled by default, may save 10% compile time.

2004-02-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/refman.itely (Customized accidental rules):
	typo.

2004-02-23  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/user/music-glossary.tely: remove the missing norwegian
	translation; they can be put in later properly.

2004-02-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/recording-group-engraver.cc (start_translation_timestep):
	init Recording_group_engraver twice.

2004-02-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gcc-3.4 snapshot: 3.4.0 20040215 (prerelease) compile fixes, and
	stray style cleanups:

	* stepmake/stepmake/c++-vars.make (EXTRA_CXXFLAGS): Remove
	-Wmissing-prototypes.

	* flower/include/killing-cons.tcc (Killing_cons): Add template
	specifier for car_.

	* flower/include/parray.hh (binsearchs): Add template specifier
	for maxkey.

	* flower/include/interval.hh: Declare elem () with template specfier.

2004-02-23  Heikki Junes <hjunes@cc.hut.fi>

	* elisp/lilypond-indent.el (get-buffer-size): add customization
	groups for several variables (Reuben Thomas).

2004-02-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/invoking.itexi (Point and click): add index
	entry.

	* scm/slur.scm (calc-slur-extremity): use 'stem only if slur would
	go under beam.

	* lily/beam-quanting.cc: tune down ROUND_TO_ZERO_SLOPE, this fixes
	sarabande beam. 

	* flower/warn.cc (programming_error): cross fingers not thumbs.

	* lily/rest.cc (polyphonic_offset_callback): return 0 when
	staff-position is set.

	* VERSION: release 2.1.26 
	
	* scm/chord-entry.scm (construct-chord): process transposition
	after processing explicit-11.  
