@@ -69,30 +69,28 @@
       (string-append "\\def\\" prefix (symbol->tex-key key) "{"  (output-tex-string str) "}%\n")
       ))
 
+(define (tex-number-def prefix key number)
+  (string-append "\\def\\" prefix (symbol->tex-key key) "{" number "}%\n"))
+
 (define (output-paper-def pd)
   (apply
    string-append
    (module-map
     (lambda (sym var)
-      (let
-	  ((val (variable-ref var))
-	   (key (symbol->tex-key sym))
-	   )
+      (let ((val (variable-ref var))
+	    (key (symbol->tex-key sym)))
 
 	(cond
 	 ((string? val)
 	  (tex-string-def "lilypondpaper" sym val))
 	 ((number? val)
-	  (string-append "\\def\\lilypondpaper" key "{"
-			 (if (integer? val)
-			     (number->string val)
-			     (number->string (exact->inexact val)))
-			 "}%\n"))
-	 (else ""))
-	))
+	  (tex-number-def "lilypondpaper" sym
+			  (if (integer? val)
+			      (number->string val)
+			      (number->string (exact->inexact val)))))
+	 (else ""))))
       
-    (ly:output-def-scope pd))
-  ))
+    (ly:output-def-scope pd))))
 
 (define (output-scopes scopes fields basename)
   (define (output-scope scope)
@@ -100,31 +98,25 @@
      string-append
      (module-map
      (lambda (sym var)
-       (let
-	   ((val (variable-ref var))
-	    (tex-key (symbol->string sym))
-	   )
+       (let ((val (variable-ref var))
+	     (tex-key (symbol->string sym)))
+	 
 	 (if (memq sym fields)
 	     (header-to-file basename sym val))
 
 	 (cond
 	  ((string? val)
-	   (tex-string-def "lilypond" sym val) )
+	   (tex-string-def "lilypond" sym val))
 	  ((number? val)
-	   (string-append "\\def\\" tex-key "{"
-			  (if (integer? val)
-			      (number->string val)
-			      (number->string (exact->inexact val)))
-			      "}"))
-	  (else "") )
-
-	 ))
-     scope)
-    ))
+	   (tex-number-def "lilypond" sym
+			   (if (integer? val)
+			       (number->string val)
+			       (number->string (exact->inexact val)))))
+	  (else ""))))
+     scope)))
   
   (apply string-append
-   (map output-scope scopes)) )
-
+	 (map output-scope scopes)))
 
 (define (select-font name-mag-pair)
   (let*
@@ -153,6 +145,7 @@
 	
 	(string-append "\\" (cddr c)))))
 
+;; top-of-file, wtf?  ugh: tagline?
 (define (top-of-file)
   (string-append
    "% generated by LilyPond "
